force-app/main/default/objects/SalesScript__c/SalesScript__c.object-meta.xml
<CustomObject>
    <label>Sales Script</label>
    <nameField>
        <label>Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>