force-app/main/default/objects/SalesScript__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>Guatemala</fullName>
            </value>
            <value>
                <fullName>Honduras</fullName>
            </value>
            <value>
                <fullName>Nicaragua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>