force-app/main/default/objects/SalesScript__c/fields/CountyCode__c.field-meta.xml
<CustomField>
    <fullName>CountyCode__c</fullName>
    <label>County Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>