force-app/main/default/objects/SalesScript__c/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <formula>IF(
ISPICKVAL(Type__c,&quot;Sales&quot;),IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot;&amp; $Label.AVX_IconSales_NT,&quot;Sales&quot;),
IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot;&amp; $Label.AVX_IconService_NT,&quot;Service&quot;))</formula>
    <label>Indicator</label>
    <type>Text</type>
</CustomField>