force-app/main/default/objects/SalesScript__c/fields/TelesalesScript__c.field-meta.xml
<CustomField>
    <fullName>TelesalesScript__c</fullName>
    <label>Telesales Script</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>