force-app/main/default/objects/SalesScript__c/recordTypes/SalesScript.recordType-meta.xml
<RecordType>
    <fullName>SalesScript</fullName>
    <active>true</active>
    <label>Sales Script</label>
</RecordType>