force-app/main/default/objects/SalesScript__c/recordTypes/Service_Script.recordType-meta.xml
<RecordType>
    <fullName>Service_Script</fullName>
    <active>true</active>
    <label>Service Script</label>
</RecordType>