force-app/main/default/objects/SalesScript__c/listViews/CPLA_SalesScriptColombia.listView-meta.xml
<ListView>
    <fullName>CPLA_SalesScriptColombia</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CountyCode__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Colombia</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SalesScript__c.SalesScript</value>
    </filters>
    <label>Script de Ventas - Colombia</label>
</ListView>